clusters/k3s/apps/system/adguard/sync-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-sync
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-sync
  template:
    metadata:
      labels:
        app: adguard-sync
    spec:
      containers:
        - name: sync
          image: ghcr.io/bakito/adguardhome-sync:v0.6.2 # Pin version for stability
