clusters/k3s/apps/system/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-dashboard
  namespace: adguard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dns.erwanleboucher.dev
      secretName: adguard-tls-secret
  rules:
    - host: dns.erwanleboucher.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # ⚠️ Points to the Primary-Only service
                name: adguard-primary-internal
                port:
                  number: 3000
